# riegeli-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  TRANSPOSE.md
.github/workflows/: ci.yml  codspeed.yml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: read_records.rs  transpose_decode.rs  varint.rs
riegeli/: Cargo.toml  TRANSPOSE.md  build.rs
riegeli-ffi/: Cargo.toml  README.md  build.rs
riegeli-ffi/cpp/: wrapper.cc  wrapper.h
riegeli-ffi/src/: lib.rs
riegeli/benches/: README.md  head_to_head.rs  throughput.rs  transpose_projection_bench.rs
riegeli/src/: block_arithmetic.rs  block_header.rs  chunk_header.rs  compression.rs  constants.rs  error.rs  field_projection.rs  hash.rs  lib.rs  proto_stream.rs  proto_wire.rs  record_position.rs  record_reader.rs  record_writer.rs  simple_chunk.rs  skipped_region.rs  varint.rs
riegeli/src/proto/: field_iter.rs  handler.rs  mod.rs  stream.rs  wire.rs  writer.rs
riegeli/src/proto_generated/: records_metadata.u.pb.rs
riegeli/src/proto_generated/google/protobuf/: descriptor.u.pb.rs  generated.rs
riegeli/src/transpose/: decoder.rs  encoder.rs  internal.rs  mod.rs
riegeli/testdata/boundary/: A_q_boundary_plus_1.riegeli  A_q_boundary_plus_1_with_tail.riegeli  B_q_boundary_plus_24.riegeli  B_q_boundary_plus_24_with_tail.riegeli  C_q_boundary_exact.riegeli  D_chunk_starts_at_boundary.riegeli  SHA256SUMS
riegeli/testdata/golden/: simple_brotli.riegeli  simple_none.riegeli  simple_zstd.riegeli  transpose_brotli.riegeli  transpose_none.riegeli  transpose_zstd.riegeli
riegeli/testdata/regression/: recovery_regions_alias.riegeli
riegeli/tests/: benchmark_correctness.rs  binary_search.rs  chunk_encoding.rs  compression.rs  conformance.rs  cross_lang_roundtrip.rs  differential.rs  field_projection.rs  lazy_bucket_decompression.rs  metadata.rs  padding.rs  projection_stress.rs  proptest_roundtrip.rs  proto_field_filter.rs  proto_field_iter.rs  proto_field_writer.rs  proto_message_reader.rs  proto_streaming.rs  reader_api.rs  reader_edge_cases.rs  record_io.rs  record_position.rs  recovery.rs  sprint_25_eval.rs  sprint_26_eval.rs  sprint_27_eval.rs  sprint_28_eval.rs  sprint_29_eval.rs  sprint_30_eval.rs  sprint_31_eval.rs  sprint_32_eval.rs  sprint_33_adversarial.rs  sprint_33_tests.rs  sprint_34_adversarial.rs  sprint_34_stress.rs  transpose_adversarial.rs  transpose_edge_cases.rs  transpose_encoding.rs  transpose_projection.rs  transpose_refactor.rs  (+3 more)
riegeli/tests/common/: mod.rs
scripts/: regen-proto.sh
scripts/regen-proto/: Cargo.toml
scripts/regen-proto/src/: main.rs
