[workspace]
members = [
  "riegeli",
  "riegeli-ffi"
]
resolver = "2"

[workspace.package]
license = "Apache-2.0"
rust-version = "1.88"

[profile.bench]
debug = true

[workspace.dependencies]
# Runtime deps
highway = "1.3"
brotli = "8"
zstd = "0.13"
snap = "1"
cxx = "1"
protobuf = "4.34.1-release"
protobuf-codegen = "4.34.1-release"
protobuf-well-known-types = "4.34.1-release"

# Build deps
cc = { version = "1", features = ["parallel"] }
cxx-build = "1"
ureq = "2"
flate2 = "1"
tar = "0.4"
blake2 = "0.10"

# Dev deps
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.15", features = ["criterion", "protobuf-codec"] }
