[package]
name = "riegeli"
version = "0.1.2"
edition = "2024"
description = "Rust implementation of the Riegeli/records file format"
license = "Apache-2.0"
repository = "https://github.com/mikedanese/riegeli-rs"
readme = "../README.md"
keywords = ["riegeli", "records", "protobuf", "serialization"]
categories = ["encoding", "compression"]
exclude = ["testdata/"]

[dependencies]
highway = { workspace = true }
protobuf = { workspace = true }
brotli = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }
snap = { workspace = true, optional = true }

[build-dependencies]
protobuf-codegen = { workspace = true }

[features]
default = ["zstd"]
brotli = ["dep:brotli"]
zstd = ["dep:zstd"]
snappy = ["dep:snap"]

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
pprof = { workspace = true }
riegeli-ffi = { path = "../riegeli-ffi" }

[[bench]]
name = "throughput"
harness = false
required-features = ["brotli", "zstd"]

[[bench]]
name = "head_to_head"
harness = false
required-features = ["brotli", "zstd"]

[[bench]]
name = "transpose_projection_bench"
harness = false
required-features = ["brotli", "zstd"]
